--- a/app/views/users/_description_modal.html.erb
+++ b/app/views/users/_description_modal.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag :remote_modal, target: :_top do %>
-    <div class="modal fade" id="statisBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-controller="bs-modal">
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-controller="bs-modal">
     <div class="modal-dialog modal-lg modal-dialog-centered ">
         <div class="modal-content">
         <div class="modal-header">
