--- a/app/views/users/_user_personal_details.html.erb
+++ b/app/views/users/_user_personal_details.html.erb
@@ -1,11 +1,11 @@
-<div id="personal_details">
+<div id="personal-details">
     <div class="card-body pb-2">
         <div>
           <p><strong>Address:</strong> <%= user.address %></P>
           <p><strong>Date of Birth:</strong> <%= user.dob %></P>
           <p><strong>Religion:</strong> <%= user.religion %></P>
           <p><strong>Caste:</strong> <%= user.cast %></P>
-          <p><strong>Gotra:</strong> <%=  %></P>
+          <p><strong>Gotra:</strong> <%= user.gotra %></P>
           <p><strong>Height:</strong> <%= user.height %></P>
           <p><strong>Weight:</strong> <%= user.weight %></P>
           <p><strong>Highest Qualification:</strong> <%= user.highest_qualification %></P>
