--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -281,7 +281,12 @@
         </div>
     </div>-->
 
-
+<div class="container light-style flex-grow-1 container-p-y">
+    <div class="progress my-2" aria-label="Animated striped example" >
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="<%= @user.profile_completion_percentage.to_i %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= @user.profile_completion_percentage.to_i %>%"><%= @user.profile_completion_percentage.to_i %>%
+        </div>
+    </div>
+</div>
 <div class="container light-style flex-grow-1 container-p-y">
   <div class="card overflow-hidden curd">
     <div class="row no-gutters row-bordered row-border-light mt-3 ms-2 mb-2">
@@ -291,8 +296,8 @@
         <%= render 'user_profile_image', user: @user %>
       </div>
       <div class="col-md-9">
-        <div><strong><%= @user.first_name%> &nbsp; <%= @user.last_name%> (age)</strong></div>
-        <div>City</div>
+        <div><strong><%= @user.first_name%> &nbsp; <%= @user.last_name%> (<%= @user.age %>) </strong></div>
+        <div><%= @user.address %></div>
       </div>
     </div>
     <hr>
