--- a/app/views/users/_account_modal.html.erb
+++ b/app/views/users/_account_modal.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag :remote_modal, target: :_top do %>
-    <div class="modal fade" id="statisBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-controller="bs-modal">
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-controller="bs-modal">
     <div class="modal-dialog modal-lg modal-dialog-centered ">
         <div class="modal-content">
         <div class="modal-header">
@@ -25,6 +25,8 @@
                     <div class="form-group row">
                         <%= form.label :email, class: "mb-3 mt-3" %>
                         <%= form.email_field :email, class: "form-control", value: current_user.email %>
+                        <%= form.label :username, "UserName <span class='text-danger'>*</span>".html_safe, class: "mb-3 mt-3" %>
+                        <%= form.text_field :username, class: "form-control", value: current_user.username, required: true %>
                     </div>
                 </div>
                 <div class="col-lg-12">
@@ -37,6 +39,10 @@
                     <%= form.label :bio, class: "mb-3 mt-3" %>
                     <%= form.text_area :bio, class: "form-control" %>
                 </div>-->
+                        <%= form.label :bio, class: "mb-3 mt-3" %>
+                        <%= form.text_area :bio, class: "form-control", value: current_user.bio %>
+                    </div>
+                </div>
 
             
             </div>
