--- a/app/views/users/_contact_details_modal.html.erb
+++ b/app/views/users/_contact_details_modal.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag :remote_modal, target: :_top do %>
-    <div class="modal fade" id="statisBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-controller="bs-modal">
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-controller="bs-modal">
     <div class="modal-dialog modal-lg modal-dialog-centered ">
         <div class="modal-content">
         <div class="modal-header">
@@ -19,12 +19,16 @@
                             <%= form.label :last_name, class: "mb-3 mt-3" %>
                             <%= form.text_field :last_name, class: "form-control", value: current_user.last_name %>
                         </div>
+                        <%= form.label :contact_number, class: "mb-3 mt-3" %>
+                        <%= form.text_field :contact_number, class: "form-control", value: current_user.contact_number %>
                     </div>
                 </div>
                 <div class="col-lg-12">
                     <div class="form-group row">
                         <%= form.label :address, class: "mb-3 mt-3" %>
                         <%= form.text_field :address, class: "form-control", value: current_user.address %>
+                        <%= form.label :alternate_contact_number, class: "mb-3 mt-3" %>
+                        <%= form.text_field :alternate_contact_number, class: "form-control", value: current_user.alternate_contact_number %>
                     </div>
                 </div>
                 <div class="col-lg-12">
@@ -43,6 +47,11 @@
                     <%= form.label :bio, class: "mb-3 mt-3" %>
                     <%= form.text_area :bio, class: "form-control" %>
                 </div>-->
+                        <%= form.label :social_media_id, class: "mb-3 mt-3" %>
+                        <%= form.text_field :social_media_id, class: "form-control", value: current_user.social_media_id %>
+                    </div>
+                </div>
+                
 
             
             </div>
