--- a/app/views/users/_password_modal.html.erb
+++ b/app/views/users/_password_modal.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag :remote_modal, target: :_top do %>
-    <div class="modal fade" id="statisBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-controller="bs-modal">
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-controller="bs-modal">
     <div class="modal-dialog modal-lg modal-dialog-centered ">
         <div class="modal-content">
         <div class="modal-header">
@@ -18,12 +18,12 @@
         
         <div class="modal-body">
             <div class="row">
-                <div class="col-lg-12">
+                <!--<div class="col-lg-12">
                     <div class="form-group row">
                         <%= form.label :current_password, "Current Password", class: "mb-3 mt-3" %>
                         <%= form.password_field :current_password, class: "form-control", placeholder: "current password" %>
                     </div>
-                </div>
+                </div>-->
                 <div class="col-lg-12">
                     <div class="form-group row">
                         <%= form.label :password, "New Password", class: "mb-3 mt-3" %>
