--- a/app/views/users/_personal_details_modal.html.erb
+++ b/app/views/users/_personal_details_modal.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag :remote_modal, target: :_top do %>
-    <div class="modal fade" id="statisBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-controller="bs-modal">
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" data-controller="bs-modal">
     <div class="modal-dialog modal-lg modal-dialog-centered ">
         <div class="modal-content">
         <div class="modal-header">
@@ -11,20 +11,20 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="form-group row">
-                        <%= form.label :address, class: "mb-3 mt-3" %>
-                        <%= form.text_field :address, class: "form-control", value: current_user.address %>
+                        <%= form.label :address,  "Address <span class='text-danger'>*</span>".html_safe, class: "mb-3 mt-3" %>
+                        <%= form.text_field :address, class: "form-control", value: current_user.address, required: true %>
                     </div>
                 </div>
                 <div class="col-lg-12">
                     <div class="form-group row">
-                        <%= form.label :dob, "Date of Birth", class: "mb-3 mt-3" %>
-                        <%= form.date_field :dob, class: "form-control", value: current_user.dob %>
+                        <%= form.label :dob, "Date of Birth <span class='text-danger'>*</span>".html_safe, class: "mb-3 mt-3" %>
+                        <%= form.date_field :dob, class: "form-control", value: current_user.dob, required: true %>
                     </div>
                 </div>
                 <div class="col-lg-12">
                     <div class="form-group row">
-                        <%= form.label :religion, "Religion", class: "mb-3 mt-3" %>
-                        <%= form.text_field :religion, class: "form-control", value: current_user.religion %>
+                        <%= form.label :religion, "Religion <span class='text-danger'>*</span>".html_safe, class: "mb-3 mt-3" %>
+                        <%= form.text_field :religion, class: "form-control", value: current_user.religion, required: true %>
                     </div>
                 </div>
                 <div class="col-lg-12">
@@ -35,8 +35,14 @@
                 </div>
                 <div class="col-lg-12">
                     <div class="form-group row">
-                        <%= form.label :height, "Height", class: "mb-3 mt-3" %>
-                        <%= form.text_field :height, class: "form-control", value: current_user.height %>
+                        <%= form.label :gotra, "Gotra", class: "mb-3 mt-3" %>
+                        <%= form.text_field :gotra, class: "form-control", value: current_user.gotra %>
+                    </div>
+                </div>
+                <div class="col-lg-12">
+                    <div class="form-group row">
+                        <%= form.label :height, "Height <span class='text-danger'>*</span>".html_safe, class: "mb-3 mt-3" %>
+                        <%= form.text_field :height, class: "form-control", value: current_user.height, required: true %>
                     </div>
                 </div>
                 <div class="col-lg-12">
@@ -45,16 +51,22 @@
                         <%= form.text_field :weight, class: "form-control", value: current_user.weight %>
                     </div>
                 </div>
+                <!--<div class="col-lg-12">
+                    <div class="form-group row">
+                        <%= form.label :highest_qualification, "Highest Qualification <span class='text-danger'>*</span>".html_safe, class: "mb-3 mt-3" %>
+                        <%= form.text_field :highest_qualification, class: "form-control", value: current_user.highest_qualification, required: true %>
+                    </div>
+                </div>-->
                 <div class="col-lg-12">
                     <div class="form-group row">
-                        <%= form.label :highest_qualification, "Highest Qualification", class: "mb-3 mt-3" %>
-                        <%= form.text_field :highest_qualification, class: "form-control", value: current_user.highest_qualification %>
+                        <%= form.label :highest_qualification, "Highest Qualification <span class='text-danger'>*</span>".html_safe, class: "mb-3 mt-3" %>
+                        <%= form.text_field :highest_qualification, class: "form-control", value: current_user.highest_qualification, required: true %>
                     </div>
                 </div>
                 <div class="col-lg-12">
                     <div class="form-group row">
-                        <%= form.label :job_packages, "Annual Income", class: "mb-3 mt-3" %>
-                        <%= form.text_field :job_packages, class: "form-control", value: current_user.job_packages %>
+                        <%= form.label :job_packages, "Annual Income <span class='text-danger'>*</span>".html_safe, class: "mb-3 mt-3" %>
+                        <%= form.text_field :job_packages, class: "form-control", value: current_user.job_packages, required: true %>
                     </div>
                 </div>
                 <div class="col-lg-12">
@@ -65,8 +77,8 @@
                 </div>
                 <div class="col-lg-12">
                     <div class="form-group row">
-                        <%= form.label :mother_tongue, "Mother Tongue", class: "mb-3 mt-3" %>
-                        <%= form.text_field :mother_tongue, class: "form-control", value: current_user.mother_tongue %>
+                        <%= form.label :mother_tongue, "Mother Tongue <span class='text-danger'>*</span>".html_safe, class: "mb-3 mt-3" %>
+                        <%= form.text_field :mother_tongue, class: "form-control", value: current_user.mother_tongue, required: true %>
                     </div>
                 </div>
                 <div class="col-lg-12">
@@ -75,10 +87,7 @@
                 <div class="col-lg-12">
                 
                 </div>
-                <!--<div class="form-group row">
-                    <%= form.label :bio, class: "mb-3 mt-3" %>
-                    <%= form.text_area :bio, class: "form-control" %>
-                </div>-->
+                
 
             
             </div>
