--- a/app/views/users/_user_account.html.erb
+++ b/app/views/users/_user_account.html.erb
@@ -1,11 +1,11 @@
-<div id="account_details">
+<div id="account-details">
         <div class="card-body">
           <div>
             <p><strong>Name:</strong> <%= user.first_name %> <%= user.last_name %></p>
             <p><strong>UserName:</strong> <%= user.username %></p>
             <p><strong>Email:</strong> <%= user.email %></p>
-            <p><strong>Bio:</strong> <%=  %></p>
-            <p><strong>Unique Id:</strong> <%=  %></p>
+            <p><strong>Bio:</strong> <%= user.bio %></p>
+            <p><strong>Unique Id:</strong> <%= user.unique_id %></p>
           </div>
 
           <% if user_signed_in? && user == current_user %>
