--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,96 @@
-<h1>Edit <%= @user.first_name  %>'s Profile</h1>
 
-<%= render 'form' %>
+<div class= "mt-5">
+<div class="container light-style flex-grow-1 container-p-y">
+    <div class="progress my-2" aria-label="Animated striped example" >
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="<%= @user.profile_completion_percentage.to_i %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= @user.profile_completion_percentage.to_i %>%"><%= @user.profile_completion_percentage.to_i %>%
+        </div>
+    </div>
+</div>
+<div class= "mt-5">
+<div class="container light-style flex-grow-1 container-p-y">
+  <div class="card overflow-hidden curd">
+    <div class="row no-gutters row-bordered row-border-light mt-3 ms-2 mb-2">
+      <div class="col-md-3 pt-0">
+        <!--<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt
+                                    class="d-block ui-w-80">-->
+        <%= render 'user_profile_image', user: @user %>
+      </div>
+      <div class="col-md-9">
+        <div><strong><%= @user.first_name%> &nbsp; <%= @user.last_name%> (<%= @user.age %>) </strong></div>
+        <div><%= @user.address %></div>
+      </div>
+    </div>
+    <hr>
+    <p class="d-inline-flex gap-1">
+      <div>
+        <a class="btn btn-secondary" data-bs-toggle="collapse" href="#account" role="button" aria-expanded="false" aria-controls="collapseExample">
+          Account
+        </a>
+      </div>
+    </p>
+    <div class="collapse" id="account">
+      <%= render 'user_account', user: @user %>
+    </div>
 
+    <p class="d-inline-flex gap-1">
+      <div><a class="btn btn-secondary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+          Personal Details
+        </a></div>
+    </p>
+
+    <div class="collapse" id="collapseExample">
+      <%= render 'user_personal_details', user: @user %>
+    </div>
+
+    <p class="d-inline-flex gap-1">
+      <div><a class="btn btn-secondary" data-bs-toggle="collapse" href="#family" role="button" aria-expanded="false" aria-controls="collapseExample">
+          Family
+        </a></div>
+    </p>
+
+    <div class="collapse" id="family">
+      <%= render 'user_family_details', user: @user %>
+    </div>
+
+    <p class="d-inline-flex gap-1">
+      <div><a class="btn btn-secondary" data-bs-toggle="collapse" href="#contact" role="button" aria-expanded="false" aria-controls="collapseExample">
+          Contact Details
+        </a></div>
+    </p>
+
+    <div class="collapse" id="contact">
+      <%= render 'user_contact_details', user: @user %>
+    </div>
+
+    <p class="d-inline-flex gap-1">
+      <div><a class="btn btn-secondary" data-bs-toggle="collapse" href="#description" role="button" aria-expanded="false" aria-controls="collapseExample">
+          Description
+        </a></div>
+    </p>
+    <div class="collapse" id="description">
+      <div class="card-body pb-2">
+        <%= render 'user_description', user: @user %>
+        <% if user_signed_in? && @user == current_user %>
+          <div class="text-right mt-3">
+            <%= link_to edit_user_description_path, data: { controller: "edit-user-description" } do %>
+              <button type="button" class="btn btn-danger">Edit</button>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+    <p class="d-inline-flex gap-1">
+      <div><a class="btn btn-secondary" data-bs-toggle="collapse" href="#password" role="button" aria-expanded="false" aria-controls="collapseExample">
+          Change Password
+        </a></div>
+    </p>
+
+    <div class="collapse" id="password">
+      <%= render 'user_password', user: @user %>
+    </div>
+
+</div>
+  
+</div>
+</div>
